cmake_minimum_required(VERSION 3.15)
project(DataStructure)

set(CMAKE_CXX_STANDARD 14)

add_executable(DataStructure main.cpp Work1/Work1.cpp Work1/Work1.h Work2/SinglyLinkedList/SinglyLinkedListNode.cpp Work2/SinglyLinkedList/SinglyLinkedListNode.h Work2/SinglyLinkedList/SinglyLinkedList.cpp Work2/SinglyLinkedList/SinglyLinkedList.h Work1/run_work1.cpp Work2/run_work2.cpp Work2/DoublyLinkedList/DoublyLinkedList.cpp Work2/DoublyLinkedList/DoublyLinkedList.h Work2/DoublyLinkedList/DoublyLinkedListNode.cpp Work2/DoublyLinkedList/DoublyLinkedListNode.h Work2/SinglyLinkedList/Intersection.cpp Work3/run_work3.cpp Work3/Deque.cpp Work3/Deque.h Work3/DequeNode.cpp Work3/DequeNode.h)